# reporting_portal/views/create_observation/api_wrapper.py
@@ -1,27 +1,56 @@
 from django_swagger_utils.drf_server.utils.decorator.interface_decorator \
     import validate_decorator
 from .validator_class import ValidatorClass
+import dataclasses
+from typing import List
+
+from reporting_portal.storages.storage_implementation \
+    import StorageImplementation
+from reporting_portal.presenters.observation_presenter_implementation \
+    import ObservationPresenterImplementation
+from reporting_portal.constants.enums import Severity
+from ...interactors.create_observation_interactor import CreateObservationInteractor
+
+SEVERITY = Severity.get_list_of_tuples()
+
+
+@dataclasses.dataclass()
+class ObservationDto:
+    title: str
+    category_id: int
+    subcategory_id: int
+    severity: SEVERITY
+    description: str
+    attachments: List[str]
 
 
 @validate_decorator(validator_class=ValidatorClass)
 def api_wrapper(*args, **kwargs):
-    # ---------MOCK IMPLEMENTATION---------
-    try:
-        from reporting_portal.views.create_observation.tests.test_case_01 \
-            import TEST_CASE as test_case
-    except ImportError:
-        from reporting_portal.views.create_observation.tests.test_case_01 \
-            import test_case
+    request_data = kwargs['request_data']
+    title = request_data['title']
+    category_id = request_data['category_id']
+    sub_category_id = request_data['sub_category_id']
+    severity = request_data['severity']
+    description = request_data['description']
+    attachments = request_data['attachments']
 
-    from django_swagger_utils.drf_server.utils.server_gen.mock_response \
-        import mock_response
-    try:
-        from reporting_portal.views.create_observation.request_response_mocks \
-            import RESPONSE_200_JSON
-    except ImportError:
-        RESPONSE_200_JSON = ''
-    response_tuple = mock_response(
-        app_name="reporting_portal", test_case=test_case,
-        operation_name="create_observation",
-        kwargs=kwargs, default_response_body=RESPONSE_200_JSON)
-    return response_tuple[1]
+    observation_dto = ObservationDto(
+        title=title,
+        category_id=category_id,
+        subcategory_id=sub_category_id,
+        severity=severity,
+        description=description,
+        attachments=attachments
+    )
+
+    storage = StorageImplementation()
+    presenter = ObservationPresenterImplementation()
+
+    interactor = CreateObservationInteractor(
+        storage=storage
+    )
+    response = interactor.create_observation_wrapper(
+        observation_dto=observation_dto,
+        presenter=presenter
+    )
+    return response
